@@ -1708,6 +1708,7 @@ for enormous (&gt;1000) room areas that span massive ranges. They
 won't
 gobble up your system resources. They are bad for popular areas though,
 
+
 and for areas with lots of special features. Things like the legal
 system and conquest system don't work well with them, since an officer
 may not know where to find the local judge when someone is arrested (if
@@ -2225,7 +2226,7 @@ exit. Such as "the grand portal", or
 <td><em>Description</em> </td>
 <td>what one sees when this
 exit is LOOKed at with the LOOK
-command</td>
+command. &nbsp;The code '@x1' can be used to substitute the next rooms display text.</td>
 </tr>
 <tr>
 <td><em>Display
