@@ -1,7 +1,7 @@
 description	1	10	0			DESC	NA	-	-	description		Long elaborate description of the room details.
 title	1	15	0			TITLE	NA	-	-	title		Brief 1-6 word description of a room.
 demolish	1	25	0		DIR	DEMOLISH	Plains	-		demolishing		Demolishes something, which has different effects.
-archway	1	25	10		DIR	DOOR	GenExit	archway|an archway		archway @x1		A specially named open exit between two places.
+archway	1	25	10		DIR	DOOR	GenExit	archway|an archway||||An archway to @x1		archway @x1		A specially named open exit between two places.
 wall	1	45	100		DIR INDOOR	WALL	NA	-		wall @x1		Blocks entry or exit between two indoor places.
 roof	1	110	350		OUTDOOR	ROOM	WoodRoom	0		frame and roof		Turns an outdoor place into an indoor one.
 curtain	3	25	20	CLOTH	INDOOR DIR	DOOR	GenCurtain	curtain|draw open|draw close|A closed curtain.|An open doorway.		curtain @x1		Openable cloth exit between two indoor places.
