@@ -8,6 +8,7 @@
   7. Prop_*Adjuster now supports ABLEPROFS and ABLELVLS, and will give log errors in arguments
   8. Socials now support qualifying zappermasks to use the social
   9. WILLQUALIFY now supports NOx syntax to filter OUT things.
+ 10. Building skills: exits now support exit descriptions, with @x1 to substitute next room display.
 
 # Build 5.9.10 Release 6/16/2020
   1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
